Fixing height overflow problem

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -307,6 +307,8 @@ select {
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 100%;
+  overflow: auto;
   font-size: 25px; }
   .team-index .join-a-team-text {
     font-size: 50px;
@@ -324,6 +326,7 @@ select {
       display: flex;
       flex-direction: row;
       justify-content: space-between;
+      min-height: 25px;
       padding: 10px 10px 10px 10px;
       border-bottom: 1px solid grey; }
       .team-index .team-ul .team-li .team-player-num {
