--- a/scss/team_index.scss
+++ b/scss/team_index.scss
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  height: 100%;
+  overflow: auto;
 
   font-size: 25px;
 
@@ -26,6 +28,7 @@
       display: flex;
       flex-direction: row;
       justify-content: space-between;
+      min-height: 25px;
 
       padding: 10px 10px 10px 10px;
       border-bottom: 1px solid grey;
